Add fix to linter errors

--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <section>
-            <h1>Home pages</h1>
+            <h1>About</h1>
         </section>
     </main>
     <footer></footer>
