Add structure layout for index and about page

--- a/About.html
+++ b/About.html
@@ -4,17 +4,95 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/main.css">
+    <script src="main.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Cardano Student Seminar Home page</title>
 </head>
 <body>
     <header>
-        <nav></nav>
+        <nav>
+            <div class="desktop-toptag md:h-8 md:block hidden">
+                <ul class="flex text-white gap-5 justify-end pr-96 items-center pt-1">
+                    <li><a href=""><img class="h-5" src="images/facebook.png" alt="facebook icon"></a></li>
+                    <li><a href=""><img class="h-5" src="images/twitter.png" alt="facebook icon"></a></li>
+                    <li>English</li>
+                    <li>My Page</li>
+                    <li>Logout</li>
+                </ul>
+            </div>
+            <div class="md:flex items-center pl-64 hidden bg-white drop-shadow-sm">
+             <img src="images/project.png" class="h-20" alt="">
+             <ul class="flex gap-16 ml-72 text-base font-medium">
+                 <li><a href="">About</a></li>
+                 <li><a href="">Program</a></li>
+                 <li><a href="">Join</a></li>
+                 <li><a href="">Sponsor</a></li>
+                 <li><a href="">News</a></li>
+             </ul>
+             <button class="ml-28 border-4 p-3">CC Campaign</button>
+          </div>
+        </nav>
     </header>
     <main>
-        <section>
-            <h1>About</h1>
+        <section class="main-head">
+            <div class="bg-gradient-to-t from-white">
+            <div class="md:hidden">
+                <img src="images/more.png" class="h-14 p-3" alt="humberger menu">
+            </div>
+            <div class="mt-16 flex flex-col items-center text-center">
+                <h2 class="text-2xl font-normal">Hello! Sharing Cardano</h2>
+               <h1 class="text-4xl font-black">GLOBAL CARDANO STUDENT SEMINAR 2022</h1>
+               <div class="w- head-qout w-80 text-sm mt-5 bg-white p-2">
+                   <p>Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event.</p>
+               </div>
+               <div class="mt-5">
+                   <p>Please contact us per Email for any further questions about Cardano Student Seminar 2022</p>
+                   <a href="#" class="font-bold underline">demelashnatnael@gmail.com</a>
+               </div>
+            </div>
+        </div>
         </section>
+
+        <section class="flex flex-col items-center m-10">
+            <h2 class="text-lg font-black w-72 text-center">Creative Commons Global Summit 2022 Logo</h2>
+            <img src="" alt="">
+            <p>The logo of CC Global Summit 2022 was decided through the logo competition from 8.Jue to 7.July.</p>
+            <img src="" alt="">
+        </section>
+
+        <section class=" text-center">
+            <h2 class="font-black text-lg"> See the past CC Global Summits</h2>
+            <img src="" alt="">
+            <p>Take a look at the last two CC Global Summits which took place in Buenos Aires and in Warasaw.</p>
+            <ul class=" m-5 flex flex-col gap-5">
+                <li class="bg-[url('images/pastcover1.jpg')] bg-cover bg-center">
+                    <div class="bg-red-600 bg-opacity-60 text-white text-center h-48 flex flex-col justify-center gap-2">
+                    <h2 class="font-black text-2xl">2020</h2>
+                    <p>Cardano Student seminar</p>
+                </div>
+                </li>
+                <li class="bg-[url('images/pastcover1.jpg')] bg-cover bg-center">
+                    <div class="bg-red-600 bg-opacity-60 text-white text-center h-48 flex flex-col justify-center gap-2">
+                    <h2 class="font-black text-2xl">2020</h2>
+                    <p>Cardano Student seminar</p>
+                </div>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2></h2>
+            <img src="" alt="">
+            <ul>
+                <li><img src="" alt=""></li>
+            </ul>
+        </section>
+       
     </main>
-    <footer></footer>
+    <footer>
+        <h2></h2>
+        <p></p>
+    </footer>
 </body>
 </html>
