--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style/main.css">
     <script src="main.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Cardano Student Seminar Home page</title>
@@ -35,22 +35,89 @@
         </nav>
     </header>
     <main>
-        <section class="main-head h-screen bg-[url('images/conference.jpg')] bg-no-repeat bg-top bg-cover">
+        <section class="main-head h-full bg-[url('images/conference.jpg')] bg-no-repeat bg-top bg-cover">
             <div class="bg-gradient-to-t from-white h-screen">
             <div class="md:hidden">
                 <img src="images/more.png" class="h-14 p-3" alt="humberger menu">
             </div>
-            <div>
-                <h2>Hello! Sharing Cardano</h2>
-               <h1>GLOBAL CARDANO STUDENT SEMINAR 2022</h1>
-               <div class="w- head-qout">
-                   <p>Explore the Cardano Summit 2022. Talks, presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event.</p>
+            <div class="m-5 mt-16">
+                <h2 class="text-2xl font-normal">Hello! Sharing Cardano</h2>
+               <h1 class="text-4xl font-black">GLOBAL CARDANO STUDENT SEMINAR 2022</h1>
+               <div class="w- head-qout w-80 text-sm mt-5 border-2 border-white p-2">
+                   <p>Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event.</p>
                </div>
-               <div>
-                   <h2>2022.10.15(TUH) ~ 16(FRI)</h2>
+               <div class="mt-5">
+                   <h2 class="text-2xl font-black">2022.10.15(TUH) ~ 16(FRI)</h2>
                    <p>@ Addis Ababa University, AAiT</p>
                </div>
             </div>
+        </div>
+        </section>
+        <section class="programs flex flex-col items-center pt-6"> 
+            <h2 class="text-white">Main Program</h2>
+            <img src="" alt="">
+            <ul class="mt-3 flex flex-col gap-6">
+                <li class="">
+                    <div class="flex items-center bg-slate-300 bg-opacity-10 mx-5 gap-3 p-2">
+                        <img src="images/facebook.png" class="h-10" alt="">
+                        <h3 class="text-orange-600 text-2xl font-black">Lecture</h3>
+                        <p class="text-white text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum consectetur, ipsam nihil </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="flex items-center bg-slate-300 bg-opacity-10 mx-5 gap-3 p-2">
+                        <img src="images/facebook.png" class="h-10" alt="">
+                        <h3 class="text-orange-600 text-2xl font-black">Lecture</h3>
+                        <p class="text-white text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum consectetur, ipsam nihil </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="flex items-center bg-slate-300 bg-opacity-10 mx-5 gap-3 p-2">
+                        <img src="images/facebook.png" class="h-10" alt="">
+                        <h3 class="text-orange-600 text-2xl font-black">Lecture</h3>
+                        <p class="text-white text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum consectetur, ipsam nihil </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="flex items-center bg-slate-300 bg-opacity-10 mx-5 gap-3 p-2">
+                        <img src="images/facebook.png" class="h-10" alt="">
+                        <h3 class="text-orange-600 text-2xl font-black">Lecture</h3>
+                        <p class="text-white text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum consectetur, ipsam nihil </p>
+                    </div>
+                </li>
+                <li>
+                    <div class="flex items-center bg-slate-300 bg-opacity-10 mx-5 gap-3 p-2">
+                        <img src="images/facebook.png" class="h-10" alt="">
+                        <h3 class="text-orange-600 text-2xl font-black">Lecture</h3>
+                        <p class="text-white text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum consectetur, ipsam nihil </p>
+                    </div>
+                </li>
+            </ul>
+            <div class="my-7">
+                <button class="bg-red-500 text-white text-lg p-5">Join Cardano Student Seminar 2022</button>
+            </div>
+        </section>
+
+        <section class="flex flex-col items-center">
+        <h2>Featured Speakers</h2>
+        <img src="" alt="">
+        <ul>
+            <li>
+                <div class="flex gap-3 mx-3 my-5">
+                    <div>
+                        <img src="images/conference.jpg" class="h-20" alt="">
+                    </div>
+                    <div>
+                        <h3 class="font-black">Yochai Benkler</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        <img src="" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </li>
+        </ul>
+        <div>
+            <button class="border-2 border-slate-700 w-96 rounded-md p-2">More</button>
         </div>
         </section>
     </main>
