--- a/About.html
+++ b/About.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/about.css">
     <link rel="stylesheet" href="./dist/output.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="about.js" defer></script>
     <title>Cardano Student Seminar Home page</title>
 </head>
 <body>
@@ -30,16 +31,39 @@
                  <li><a href="">Sponsor</a></li>
                  <li><a href="">News</a></li>
              </ul>
-             <button class="ml-28 border-4 border-brandorange text-brandorange p-3">CC Campaign</button>
+             <button type="button" class="ml-28 border-4 border-brandorange text-brandorange p-3">CC Campaign</button>
           </div>
         </nav>
     </header>
     <main>
-        <section class="main-head bg-brandgray bg-opacity-40 md:h-full">
+        <section class="main-head bg-brandgray bg-opacity-40 md:h-full pb-8 md:pb-2">
             <div class="bg-[url('images/backpattern.png')] bg-no-repeat bg-contain bg-center">
-            <div class="md:hidden">
-                <img src="images/more.png" class="h-14 p-3" alt="humberger menu">
-            </div>
+                <div class="md:hidden">
+                    <img src="images/more.png" class="h-14 p-3" alt="humberger menu" onclick="display()" id="menu">
+                    <img
+                    src="images/close.png"
+                    alt="menu"
+                    id="menu2"
+                    onclick="display()"
+                    class="h-12 p-3"
+                  />
+                </div>
+                <div class="mob-nav-container" id="mnc">
+                    <ul class="mob-nav text-3xl font-black ml-20 text-brandbrown">
+                      <li>
+                        <a href="index.html" onclick="menuClicked()">Home</a>
+                      </li>
+                      <li>
+                        <a href="#" onclick="menuClicked()">Join</a>
+                      </li>
+                      <li>
+                        <a href="#" onclick="menuClicked()">Sponsor</a>
+                      </li>
+                      <li>
+                        <a href="#" onclick="menuClicked()">News</a>
+                      </li>
+                    </ul>
+                  </div>
             <div class="pt-16 flex flex-col items-center text-center">
                 <h2 class="text-2xl md:text-4xl font-normal text-brandorange md:hidden">Hello! Sharing Cardano</h2>
                <h1 class="md:w-1/3 text-4xl md:text-5xl text-brandorange font-black md:mt-24 md:mb-5">GLOBAL CARDANO STUDENT SEMINAR 2022</h1>
@@ -47,7 +71,8 @@
                 <div class="bg-brandorange h-0.5 w-6"></div>
             </div>
                <div class="md:w-1/3 md:p-5 head-qout w-80 text-sm mt-5 bg-white p-2 md:mb-5">
-                   <p>Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore animi, quos accusantium doloremque soluta perferendis corrupti! Hic repellat reprehenderit voluptatum harum cupiditate. Aut facere rerum officia tenetur minus cupiditate tempora.</p>
+                <p class="md:hidden block">Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. </p>   
+                <p class="md:black hidden">Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore animi, quos accusantium doloremque soluta perferendis corrupti! Hic repellat reprehenderit voluptatum harum cupiditate. Aut facere rerum officia tenetur minus cupiditate tempora.</p>
                </div>
                <div class="mt-5 md:mb-24">
                    <p class="text-sm text-center mx-5">Please contact us per Email for any further questions about Cardano Student Seminar 2022</p>
@@ -113,8 +138,8 @@
         </section>
        
     </main>
-    <footer class="px-5 gap-8 pt-8 h-28 md:bg-brandbrown footer md:text-white">
-     <div class="flex px-3 gap-8 items-center md:pl-80 md:gap-60">
+    <footer class="md:px-5 px-1 pt-8 h-28 md:bg-brandbrown footer md:text-white">
+     <div class="flex px-3 gap-3 items-center justify-center md:pl-10 md:gap-60">
         <h2 class="font-black">Cardano Student Seminar</h2>
         <div class="text-sm">
         <p>2022 Cardano Seminar Ethiopia. Some Rights Reserved</p>
