--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                  <li><a href="">Sponsor</a></li>
                  <li><a href="">News</a></li>
              </ul>
-             <button class="ml-28 border-4 border-brandorange text-brandorange p-3">CC Campaign</button>
+             <button type="button" class="ml-28 border-4 border-brandorange text-brandorange p-3">CC Campaign</button>
           </div>
         </nav>
     </header>
@@ -41,8 +41,31 @@
             <div class="bg-gradient-to-t from-white ">
             <div class="bg-[url('images/backpattern.png')] bg-no-repeat bg-cover bg-center md:h-screen">
             <div class="md:hidden">
-                <img src="images/more.png" class="h-14 p-3" alt="humberger menu">
+                <img src="images/more.png" class="h-14 p-3" alt="humberger menu" onclick="display()" id="menu">
+                <img
+                src="images/close.png"
+                alt="menu"
+                id="menu2"
+                onclick="display()"
+                class="h-12 p-3"
+              />
             </div>
+            <div class="mob-nav-container" id="mnc">
+                <ul class="mob-nav text-3xl font-black ml-20 text-brandbrown">
+                  <li>
+                    <a href="About.html" onclick="menuClicked()">About</a>
+                  </li>
+                  <li>
+                    <a href="#" onclick="menuClicked()">Join</a>
+                  </li>
+                  <li>
+                    <a href="#" onclick="menuClicked()">Sponsor</a>
+                  </li>
+                  <li>
+                    <a href="#" onclick="menuClicked()">News</a>
+                  </li>
+                </ul>
+              </div>
             <div class="p-5 md:ml-60 md:pt-40">
                 <h2 class="text-2xl md:text-4xl font-normal text-brandorange ">Hello! Sharing Cardano</h2>
                 <div>
@@ -51,9 +74,9 @@
                <div class="md:text-lg md:w-1/3 head-qout w-80 text-sm mt-5 border-2 border-white p-5">
                    <p>Presentations, and demos from Cardano leaders and luminaries hosted in the biggest virtual world ever for a blockchain event.</p>
                </div>
-               <div class="mt-5">
-                   <h2 class="text-2xl md:text-4xl font-black">2022.10.15(TUH) ~ 16(FRI)</h2>
-                   <p class="md:text-4xl">@ Addis Ababa University, AAiT</p>
+               <div class="mt-5 head-sub" >
+                   <h2 class="text-2xl md:text-4xl font-black text-brandbrown">2022.10.15(TUH) ~ 16(FRI)</h2>
+                   <p class="md:text-4xl text-brandbrown">@ Addis Ababa University, AAiT</p>
                </div>
             </div>
             </div>
@@ -61,50 +84,50 @@
     </div>
         </section>
         <section class="bg-brandbrown main-program"> 
-            <div class="bg-[url('images/mainprogram.png')] bg-no-repeat bg-cover flex flex-col items-center pt-6">
+            <div class="bg-[url('images/mainprogram.png')] bg-no-repeat bg-cover flex flex-col items-center pt-6 h-full bg-opacity-75">
             <h2 class="text-white font-black text-xl">Main Program</h2>
             <div class="flex justify-center mt-2">
                 <div class="bg-brandorange h-0.5 w-8"></div>
             </div>
-            <ul class="mt-5 flex flex-col gap-6 md:flex-row md:gap-x-1">
+            <ul class="pt-5 flex flex-col gap-6 md:flex-row md:gap-x-1">
                 <li>
                     <div class="flex items-center bg-brandgray bg-opacity-10 gap-3 mx-5 md:mx-0 p-2 md:flex-col md:items-center md:text-center md:w-52 md:h-56 md:hover:border-2 md:hover:border-white">
-                        <img src="images/facebook.png" class="h-10" alt="">
+                        <img src="images/lecturer.png" class="h-10 md:pt-2 pt-0" alt="">
                         <h3 class="text-orange-600 text-2xl font-black ">Lecture</h3>
                         <p class="text-white text-sm ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum consectetur, ipsam nihil </p>
                     </div>
                 </li>
                 <li>
                     <div class="flex items-center bg-slate-300 bg-opacity-10 mx-5 md:mx-0 gap-3 p-2 md:flex-col md:items-center md:text-center md:w-52 md:h-56 md:hover:border-2 md:hover:border-white">
-                        <img src="images/facebook.png" class="h-10" alt="">
-                        <h3 class="text-orange-600 text-2xl font-black ">Lecture</h3>
+                        <img src="images/forum.png" class="h-10 md:pt-2 pt-0" alt="">
+                        <h3 class="text-orange-600 text-2xl font-black ">Forum</h3>
                         <p class="text-white text-sm ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum consectetur, ipsam nihil </p>
                     </div>
                 </li>
                 <li>
                     <div class="flex items-center bg-slate-300 bg-opacity-10 mx-5 md:mx-0 gap-3 p-2 md:flex-col md:items-center md:text-center md:w-52 md:h-56 md:hover:border-2 md:hover:border-white">
-                        <img src="images/facebook.png" class="h-10" alt="">
-                        <h3 class="text-orange-600 text-2xl font-black ">Lecture</h3>
+                        <img src="images/cpu.png" class="h-10 md:pt-2 pt-0" alt="">
+                        <h3 class="text-orange-600 text-2xl font-black ">Tech</h3>
                         <p class="text-white text-sm ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum consectetur, ipsam nihil </p>
                     </div>
                 </li>
                 <li>
                     <div class="flex items-center bg-slate-300 bg-opacity-10 mx-5 md:mx-0 gap-3 p-2 md:flex-col md:items-center md:text-center md:w-52 md:h-56 md:hover:border-2 md:hover:border-white">
-                        <img src="images/facebook.png" class="h-10" alt="">
-                        <h3 class="text-orange-600 text-2xl font-black ">Lecture</h3>
+                        <img src="images/meeting.png" class="h-10 md:pt-2 pt-0" alt="">
+                        <h3 class="text-orange-600 text-2xl font-black ">Meetings</h3>
                         <p class="text-white text-sm ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum consectetur, ipsam nihil </p>
                     </div>
                 </li>
                 <li>
                     <div class="flex items-center bg-slate-300 bg-opacity-10 mx-5 md:mx-0 gap-3 p-2 md:flex-col md:items-center md:text-center md:w-52 md:h-56 md:hover:border-2 md:hover:border-white">
-                        <img src="images/facebook.png" class="h-10" alt="">
-                        <h3 class="text-orange-600 text-2xl font-black ">Lecture</h3>
+                        <img src="images/party.png" class="h-10 md:pt-2 pt-0" alt="">
+                        <h3 class="text-orange-600 text-2xl font-black ">Party</h3>
                         <p class="text-white text-sm ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum consectetur, ipsam nihil </p>
                     </div>
                 </li>
             </ul>
-            <div class="my-7">
-                <button class="bg-red-500 text-white text-lg p-5 md:hidden">Join Cardano Student Seminar 2022</button>
+            <div class="my-10">
+                <button type="button" class="bg-red-500 text-white text-lg p-5 md:hidden">Join Cardano Student Seminar 2022</button>
                 <a href="#" class="hidden text-white md:block underline">SEE THE WHOLE PROGRAM</a>
             </div>
         </div>
@@ -117,26 +140,24 @@
             <div class="bg-brandorange h-px w-10"></div>
         </div>
         </div>
-    <div id="speaker">
+    <div id="speaker" class="">
        
     </div>
-        <div class="my-10 md:hidden flex justify-center">
-            <button class="border-2 border-brandgray w-96 rounded-md p-2">
-                <div class="flex justify-center items-center gap-3">
-               <p class="text-base">MORE</p> 
+        <div class="my-8 md:hidden flex justify-center">
+            <button onclick="showMore()" id="loadMore" type="button" class="h-14 border-2 border-brandgray w-96 rounded-md p-2 flex justify-center items-center gap-3">
+               <span class="text-base">MORE</span> 
                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-brandorange" viewBox="0 0 20 20" fill="currentColor">
                 <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
               </svg>
-            </div>
             </button>
         </div>
         </section>
-        <section class="bg-brandbrown text-white text-center h-64 pt-3 hidden md:block">
-            <h2 class="text-2xl font-black md:opacity-50">Partner</h2>
+        <section class="bg-brandbrown text-white text-center md:h-72 h-44 pt-3 hidden md:block" id="partners">
+            <h2 class="text-2xl font-black md:opacity-50 md:pt-14">Partner</h2>
             <div class="flex justify-center mt-2">
                 <div class="bg-brandorange h-px w-10"></div>
             </div>
-            <ul class="flex flex-wrap justify-center m-5 gap-4 md:gap-10">
+            <ul class="flex flex-wrap justify-center m-5 gap-4 md:gap-10 md:pt-6">
                 <li><img src="images/airbnb.png" class="h-10 md:h-16 opacity-30" alt=""></li>
                 <li><img src="images/airbnb.png" class="h-10 md:h-16 opacity-30" alt=""></li>
                 <li><img src="images/airbnb.png" class="h-10 md:h-16 opacity-30" alt=""></li>
@@ -146,8 +167,8 @@
         </section>
        
     </main>
-    <footer class=" bg-brandgray bg-opacity-10 hidden md:block">
-    <div class="flex px-5 gap-8 items-center h-28 md:pl-80 md:gap-60">
+    <footer class=" bg-brandgray bg-opacity-10 hidden md:block" id="footer">
+    <div class="flex md:px-5 px-3 gap-8 items-center md:justify-center h-28  md:gap-60">
         <h2 class="font-black md:text-2xl">Cardano Student Seminar</h2>
         <div class="text-sm">
         <p>2022 Cardano Seminar Ethiopia. Some Rights Reserved</p>
